--- a/ErasmusDDD.MVC/Views/Livros/Edit.cshtml
+++ b/ErasmusDDD.MVC/Views/Livros/Edit.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>LivroVM</h4>
+        <h4>Livro</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.LivroId)
